# hfl-benchmark

./: README.md  benchmark.ml  dune
inputs/hfl/test_safe_2019/: fail-convert  ml2hfl.sh
inputs/hfl/test_safe_2019/adt/: all_equal.in  clone_2d.in  combine.in  combine_difficult.in  divide_list.in  divide_list2.in  fold_fun_list.in  fold_left.in  fold_right.in  group.in  insert_sort_same_len.in  isnil.in  isort_geq.in  iter.in  length.in  list_bound.in  list_bound2.in  maximum.in  maximum_acc.in  nonempty_subsequence.in  nth.in  nth0.in  zip.in
inputs/hfl/test_safe_2019/esop2017/: colwheel.in  fold_div.in  harmonic.in  queen_simple.in  risers.in  sum_add.in  twice.in  various.in
inputs/hfl/test_safe_2019/fpice/: inductive.in  inductive2.in  inductive3-2.in  inductive3.in  inductive4.in  inductive5.in  inductive6-2.in  inductive6-3.in  inductive6.in  repeat.in
inputs/hfl/test_safe_2019/mochi/: a-copy-print.in  a-dotprod.in  a-init.in  a-max.in  ack.in  apply.in  array_init.in  bcopy.in  bcopy2.in  bcopy3.in  bcopy4.in  bcopy5.in  bsearch.in  copy_intro.in  dotprod.in  dotprod2.in  dotprod3.in  dotprod4.in  dotprod5.in  dotprod_lin.in  enc-filter.in  enc-rev_accum.in  enc-rev_append.in  enc-zip.in  enc-zip3.in  enc-zip4.in  enc-zip_map.in  enc-zip_map2.in  enc-zip_unzip.in  exception.in  fact_exn.in  fib.in  flip.in  flow.in  fxx.in  gib.in  gib2.in  hors.in  hrec.in  id_by_fold.in  (+31 more)
inputs/ml/test_safe_2019/: convert-failure  ml2hfl.sh
lists/: HO-nontermination  test_safe_2019
scripts/: hflmc2-with-profile  mochi-nonterm  mochi-with-profile
(+93 files in other folders)
