(executable
  (name benchmark)
  (libraries
    fmt
    core
    yojson
    cmdliner
    lwt.unix
    )
  (preprocess (pps ppx_deriving.std ppx_deriving_yojson ppx_deriving_cmdliner)))
(alias
  (name benchmark)
  (deps (file benchmark.ml))
  (action (run %{exe:benchmark.exe})))

(env (dev (flags (:standard -warn-error -A -w -3-33-39))))
